<?xml version="1.0"?>
<package format="2">
  <name>haruna</name>
  <version>0.0.0</version>
  <description>Haruna package</description>
  <maintainer email="miyadera@smilerobotics.com">miyadera</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rt_usb_9axisimu_driver</exec_depend>
  <exec_depend>imu-tools</exec_depend>
</package>
